Fix project image sizing on mobile devices.

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -662,7 +662,7 @@ body {
                 }
 
                 .project-img {
-                    height: 40vw;
+                    height: 50vw;
                     position: relative;
                     margin-top: 3%;
                 }
